# qt3d-demo

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.eg  README.md  qt3d-demo_zh_CN.ts  vcpkg.json  vcpkg.schema.json
cmake/: VCPKG.cmake
cmake/3rd/: EntityX.cmake
docs/: project-summary.md
docs/superpowers/specs/: 2026-04-06-property-panel-refactor-design.md
resources/: resources.qrc
src/: hierarchy.cpp  hierarchy.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  property_panel.cpp  property_panel.h
src/core/: event_bus.cpp  event_bus.h  observable_object.cpp  observable_object.h  profiler.cpp  profiler.h  x_property.cpp  x_property.h  x_property_validator.cpp  x_property_validator.h
src/demo/: edge_render_node.h  extrude_object.cpp  extrude_object.h  extrude_render_node.cpp  extrude_render_node.h  geometry_render_node.h  polygon_object.cpp  polygon_object.h  polygon_render_node.cpp  polygon_render_node.h  primitive_object.cpp  primitive_object.h  primitive_render_node.cpp  primitive_render_node.h  scene_controller.cpp  scene_controller.h  scene_object.cpp  scene_object.h
src/property_panel/: property_editor_factory.cpp  property_editor_factory.h  property_section.h
src/property_panel/editors/: color_editor.cpp  color_editor.h  double_editor_row.cpp  double_editor_row.h  enum_editor.cpp  enum_editor.h  int_editor_row.cpp  int_editor_row.h  reorderable_point_list_editor.cpp  reorderable_point_list_editor.h  text_editor_row.cpp  text_editor_row.h  vector3_editor.cpp  vector3_editor.h
src/property_panel/sections/: extrude_section.cpp  extrude_section.h  line_section.cpp  line_section.h  object_section.cpp  object_section.h  polygon_section.cpp  polygon_section.h  primitive_dimensions_section.cpp  primitive_dimensions_section.h  transform_section.cpp  transform_section.h
src/q3dextension/computational_geometry/: edge_mesh.cpp  edge_mesh.h  extrude_shape_geometry.cpp  extrude_shape_geometry.h  extrude_shape_mesh.cpp  extrude_shape_mesh.h  line_geometry.cpp  line_geometry.h  line_mesh.cpp  line_mesh.h  polygon_geometry.cpp  polygon_geometry.h  polygon_mesh.cpp  polygon_mesh.h  ring_geometry.cpp  ring_geometry.h  ring_mesh.cpp  ring_mesh.h
src/q3dextension/curves/: arc_curve.cpp  arc_curve.h  bezier_curve.cpp  bezier_curve.h  bezier_curve.tpp  curve.cpp  curve.h  ellipse_curve.cpp  ellipse_curve.h  line_curve.cpp  line_curve.h
src/q3dextension/extras/: behavior_component.cpp  behavior_component.h  camera_controller.cpp  camera_controller.h  custom_renderer.cpp  custom_renderer.h  gizmo_axis.cpp  gizmo_axis.h  layer_manager.cpp  layer_manager.h  text3d_entity.cpp  text3d_entity.h
src/q3dextension/shapes/: polygon_profile_shape.cpp  polygon_profile_shape.h  shape.cpp  shape.h  trapezoid_shape.cpp  trapezoid_shape.h
src/q3dextension/utils/: geometry_util.cpp  geometry_util.h
src/scene/: edge_render_node.cpp  extrude_object.cpp  extrude_object.h  extrude_render_node.cpp  extrude_render_node.h  geometry_render_node.h  polygon_object.h  polygon_render_node.h  primitive_object.cpp  primitive_render_node.cpp  primitive_render_node.h  scene_controller.cpp  scene_controller.h  scene_object.cpp  scene_object.h
src/utils/: collection_util.cpp  collection_util.h  color_util.cpp  color_util.h  compare_util.cpp  compare_util.h  crash_handler.cpp  crash_handler.h  logging.cpp  logging.h
src/visualization/: graph_frame.cpp  graph_frame.h
src/visualization/graph3d/: graph3d_frame.cpp  graph3d_frame.h  graph3d_scene.cpp  graph3d_scene.h  render_node_factory.cpp  render_node_factory.h  scene_model.cpp  scene_model.h
src/visualization/graph3d/core/: colour_node_component.h  components.pch.h  draw_outline_component.cpp  draw_outline_component.h  render_node.cpp  render_node.h  render_node_component.h
src/visualization/graph3d/nodes/: colour_node_component.cpp  render_node.cpp  render_node.h  render_node_component.cpp
tests/: CMakeLists.txt  test_helper.h
tests/core/: CMakeLists.txt  event_bus_test.cpp  observable_test.cpp
tests/property_panel/: CMakeLists.txt  property_panel_test.cpp
tests/render_node/: CMakeLists.txt  render_node_test.cpp
